settings save but dont load + terrain fix

--- a/.gitattributes
+++ b/.gitattributes
@@ -3,7 +3,7 @@
 *.cs diff=csharp text
 *.cginc text
 *.shader text
-
+*.terrain.asset binary
 *.mat merge=unityyamlmerge eol=lf
 *.anim merge=unityyamlmerge eol=lf
 *.unity merge=unityyamlmerge eol=lf
