ignore circle dummy

--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,10 @@
 /[Bb]uilds/
 /[Ll]ogs/
 /[Uu]ser[Ss]ettings/
-/[Aa]ssets/Prototype/CirlceTransition.mat
+
+# SkullEmoji
+/Assets/Prototype/CircleTransition.mat
+*CircleTransition.mat
 
 # MemoryCaptures can get excessive in size.
 # They also could contain extremely sensitive data
